--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -5,4 +5,24 @@ sql:
     engine: "postgresql"
     gen:
       go:
+        sql_package: "pgx/v5"
         out: "internal/database" 
+        overrides: 
+          - db_type: "uuid"
+            go_type: "github.com/google/uuid.UUID"
+          - db_type: "timestamp"
+            go_type: "time.Time"
+          - db_type: "timestamptz"
+            go_type: "time.Time"
+          - column: "refresh_tokens.expire_at"
+            go_type: "time.Time"
+          - column: "refresh_tokens.updated_at"
+            go_type: "time.Time"
+          - column: "users.created_at"
+            go_type: "time.Time"
+          - column: "users.updated_at"
+            go_type: "time.Time"
+          - column: "chirp.created_at"
+            go_type: "time.Time"
+          - column: "chirp.updated_at"
+            go_type: "time.Time"
