--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -26,3 +26,5 @@ sql:
             go_type: "time.Time"
           - column: "chirp.updated_at"
             go_type: "time.Time"
+          - column: "user_relationships.updated_at"
+            go_type: "time.time"
