Added the send message endpoint

--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -27,4 +27,4 @@ sql:
           - column: "chirp.updated_at"
             go_type: "time.Time"
           - column: "user_relationships.updated_at"
-            go_type: "time.time"
+            go_type: "time.Time"
